# celery-basic-usage-tutorial

./: README.md  pyproject.toml  run.py  worker.py
